 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 4
============
* [DanielPharos]: Added VPK file loading support (for example: Left 4 Dead).

* [DanielPharos]: Model editor, Fix bone-position with Undo/Redo dialog box and made some fixes to selection-holding code.

* [cdunde/DanielPharos]: Added support for player models attachment tags.

* [DanielPharos]: New slide bar dialog form type control added.

* [cdunde]: Model editor, Major change of Skin-view Linear Handle selection and dragging system, massively improving drawing time.

* [cdunde]: Model editor, Added entity extraction from game map .bsp files for .qrk file creation of Conversion Tool system.

* [cdunde/DanielPharos]: Setup importer for MoHAA .skd and .skc models (static and animated) with bone and skin support.

* [cdunde/DanielPharos]: Setup full game support for American McGee's - Alice in the map editor along with version conversion tool.

* [cdunde/DanielPharos]: Setup exporter for Alice, EF2 and FAKK2 .skb mesh and .ska animated models with bone and skin support.

* [cdunde/DanielPharos]: Setup exporter for Alice, EF2 and FAKK2 .tan models
          - (static and animated), tags not supported at this time.

* [cdunde/DanielPharos]: Setup importers for Alice, EF2 and FAKK2 .skb, .ska and
          - .tan models (static and animated) with bone and skin support.

* [cdunde]: Model editor, Setup 'Auto Scaling' function for the Skin-view that resets the skin handles and Component's UV's
          - to fit the currently selected and viewable skin texture of that Component.

* [DanielPharos/cdunde]: Setup Model Editor to allow importing of model from main explorer File menu.
